2A/05_Projet_GL/src/test/deca/context/valid/complet/80_method_call_class_sous_class.deca
// Description :
// Test valide contextulle
// Resultats :
//    Arbre avec décoration 
// Historique : 
//  cree le 18/01/2024

class A {
    void get(A a) {

    }
}

class B extends A {
    
}

{
    A a; 
    B b ; 
    a.get(b);
}