2A/05_Projet_GL/src/test/deca/context/invalid/complet/87_casting_method_void.deca
// Description :
//  casting void vers void 
// Resultats :
//    ligne 17 :  l'opération de casting n'est pas possible avce void
// Historique : 
//  cree le 18/01/2024

class A {

    void get() {

    }
}

{
    A a = new A();
    a=(void)(a.get());
}